<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_centerHorizontal="true"
    android:background="#FFEFD5"
    >

  <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:textColor="#FF7F24"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="@string/app_name"/>
  
    <TextView
        android:id="@+id/normal"
        android:gravity="center"
        android:textColor="#FF7F24"
        android:layout_marginTop="70dp"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/normalText"
        />
    
   <TextView
       android:id="@+id/jieji"
       android:gravity="center"
       android:textColor="#FF7F24"
       android:layout_marginTop="40dp"
       android:layout_below="@id/normal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="30sp"
       android:text="@string/jiejiText"
       />
        
    <TextView
        android:id="@+id/jishi"
        android:gravity="center"
        android:textColor="#FF7F24"
        android:layout_marginTop="40dp"
        android:layout_below="@id/jieji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/jishiText"
        />
            

</RelativeLayout>
