<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:background="#FFEFD5"
    >
    
    <TextView
        android:paddingTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abouttitle" 
        android:textColor="#FF7F24"
         android:textSize="30sp"/>
     <TextView
        android:id="@+id/shuoming"
        android:layout_width="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:textColor="#FF7F24"
         android:textSize="18sp"
        android:text="@string/shuoming_content" />

      <TextView
          android:id="@+id/noadw"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="10dp"
          android:text="@string/noad"
          android:textColor="#ff0000" 
           android:textSize="22sp"
          />

   

    

</LinearLayout>
